fixed horizontal overflow issue

--- a/styles/samz.module.css
+++ b/styles/samz.module.css
@@ -1,9 +1,10 @@
 .container{
     padding: 2rem 5rem;
     display: inline-block;
-    width: 100%;
     background-color: #1B262C;
     min-height: 100vh;
+    min-width: 100vh;
+    overflow: auto;
 }
 
 .button{
